[package]
name = "speedy-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { path = "./hyper", features = ["full"] }
tokio = "1"
http = "0.2"
futures = "*"
bytes = "*"
tracing = "*"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-log = { version = "*" }
tracing-subscriber = { version = "*" }
anyhow = "*"
