[package]
name = "speedy-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { path = "./hyper", features = ["full"] }
tokio = "1"
http = "0.2"
futures = "*"
bytes = "*"
tracing = "*"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-log = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "*"
tokio-rustls = { version = "0.22" }
webpki-roots = "0.21"
webpki = "0.21"
rustls = "0.19"
